--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <p-menubar [model]="items" *ngIf="getIsShowTop">
       <ng-template pTemplate="start" >
         
-        <a onclick='javascript:window.history.back();' style="cursor: pointer;">
+        <a onclick='javascript:window.location.href="/"' style="cursor: pointer;">
           <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2" style="position: relative;left:0.5rem;bottom:10px;margin-right: 1.5rem;">
         </a>
       </ng-template>
