--- a/src/app/pages/modules/dashboards/guild/guild.component.html
+++ b/src/app/pages/modules/dashboards/guild/guild.component.html
@@ -48,8 +48,8 @@
                 <td>{{guild.violationCount}}</td>
                 <td>{{guild.membersCount}}</td>
                 <td>
-                    <button *ngIf="guild.status==0" style="margin-right: 1rem;" pButton type="button" label='屏蔽' (click)="setGuildStatus(false)" class="p-button-raised p-button-danger"></button>
-                    <button *ngIf="guild.status!=0" style="margin-right: 1rem;" pButton type="button" label='还原' (click)="setGuildStatus(true)" class="p-button-raised p-button-success"></button>
+                    <button *ngIf="guild.status==0" style="margin-right: 1rem;" pButton type="button" label='删除' (click)="setGuildStatus(guild)" class="p-button-raised p-button-danger"></button>
+                    <button *ngIf="guild.status!=0" style="margin-right: 1rem;" pButton type="button" label='还原' (click)="setGuildStatus(guild)" class="p-button-raised p-button-success"></button>
 
 
                     <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" (click)="DetailGuild(guild)" ></button>
