--- a/src/app/pages/modules/dashboards/discuss/discuss.component.html
+++ b/src/app/pages/modules/dashboards/discuss/discuss.component.html
@@ -42,7 +42,7 @@
                 <td>{{discuss.guildId}}</td>
                 <td>{{discuss.discussId}}</td>
                 <td>{{discuss.title}}</td>
-                <td><img [src]='discuss.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
+                <td><img *ngIf="discuss.avatarUrl!=null" [src]='discuss.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
                 <td>{{discuss.createdDate}}</td>
                 <td>{{discuss.beginDate}}</td>
                 <td>{{discuss.endDate}}</td>
@@ -52,7 +52,7 @@
                 <td>{{discuss.unviewedReceiversCount}}</td>
                 <td>
                   <button *ngIf="discuss.status==0" style="margin-right: 1rem;" pButton type="button" label='删除' (click)="setDiscussStatus(discuss)" class="p-button-raised p-button-danger"></button>
-                  <button *ngIf="discuss.status!=0" style="margin-right: 1rem;" pButton type="button" label='还原' (click)="setDiscussStatus(discuss)" class="p-button-raised p-button-success"></button>
+                  <button *ngIf="discuss.status!=0" style="margin-right: 1rem;" pButton type="button" label='恢复' (click)="setDiscussStatus(discuss)" class="p-button-raised p-button-success"></button>
                 </td>
             </tr>
         </ng-template>
