--- a/src/app/pages/modules/dashboards/guild-member/guild-member.component.html
+++ b/src/app/pages/modules/dashboards/guild-member/guild-member.component.html
@@ -1,3 +1,83 @@
-<p>
-  guild-member works!
-</p>
+
+<div  class="card">
+
+  <p-table  #dt [value]="guildMembers" [rows]="10" [paginator]="true" [globalFilterFields]="['guildName','guildAddress','guildId']"
+  [(selection)]="selectedGuildMembers" [rowHover]="true" dataKey="guildId"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+  <ng-template pTemplate="caption">
+    <div class="p-d-flex p-ai-center p-jc-between">
+        <h5 class="p-m-0">Guild Management</h5>
+        <span class="p-input-icon-left">
+            <i class="pi pi-search"></i>
+            <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+        </span>
+    </div>
+</ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th style="width: 3rem"></th>
+            <th pSortableColumn="guildId">教会ID <p-sortIcon field="guildId"></p-sortIcon></th>
+            <th pSortableColumn="guildName">教会名字 <p-sortIcon field="guildName"></p-sortIcon></th>
+            <th>教会头像</th>
+            <th pSortableColumn="guildAddress">教会地址 <p-sortIcon field="guildAddress"></p-sortIcon></th>
+            <th pSortableColumn="guildMembersCount">教会成员人数 <p-sortIcon field="guildMembersCount"></p-sortIcon></th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-guildDto let-expanded="expanded">
+        <tr>
+            <td>
+                <button type="button" pButton pRipple [pRowToggler]="guildDto" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+            </td>
+            <td>{{guildDto.guildId}}</td>
+            <td>{{guildDto.guildName}}</td>
+            <td><img *ngIf="guildDto.guildAvatarUrl!=null" [src]="guildDto.guildAvatarUrl" style="    height: 60px;
+              object-fit: cover;
+              width: 65px;" class="p-shadow-4" /></td>
+            <td>{{guildDto.guildAddress}}</td>
+            <td>{{guildDto.guildMembersCount}}</td>
+            <td></td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="rowexpansion" let-guildDto>
+        <tr>
+            <td colspan="7">
+                <div class="p-p-3">
+                    <p-table [value]="guildDto.guildMembersDto" dataKey="memberId">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th pSortableColumn="memberId">教会成员ID <p-sortIcon field="memberId"></p-sortIcon></th>
+                                <th pSortableColumn="nickname">教会成员名字<p-sortIcon field="nickname"></p-sortIcon></th>
+                                <th pSortableColumn="avatarUrl">成员头像 <p-sortIcon field="avatarUrl"></p-sortIcon></th>
+                                <th pSortableColumn="phoneNumber">手机号 <p-sortIcon field="phoneNumber"></p-sortIcon></th>
+                                <th pSortableColumn="role">成员角色 <p-sortIcon field="role"></p-sortIcon></th>
+                                <th pSortableColumn="status">成员状态 <p-sortIcon field="status"></p-sortIcon></th>
+                                <th style="width: 4rem">操作</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-guildMember>
+                            <tr>
+                                <td>{{guildMember.memberId}}</td>
+                                <td>{{guildMember.nickname}}</td>
+                                <td><img *ngIf="guildMember.avatarUrl!=null" [src]="guildMember.avatarUrl" style="height: 60px;
+                                  object-fit: cover;
+                                  width: 65px;" class="p-shadow-4" /></td>
+                                <td>{{guildMember.phoneNumber}}</td>
+                                <td>{{guildMember.role==2?'教会管理员':guildMember.role==1?'同工':'普通成员'}}</td>
+                                <td>{{guildMember.status| dashboardspipe:"guildMemberStatus"}}</td>
+                                <td> <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2"  ></button></td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="emptymessage">
+                            <tr>
+                                <td colspan="6">There are no order for this product yet.</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </td>
+        </tr>
+    </ng-template>
+  </p-table>
+  
+</div>
