--- a/src/app/pages/modules/dashboards/guild-member/guild-member.component.html
+++ b/src/app/pages/modules/dashboards/guild-member/guild-member.component.html
@@ -43,7 +43,18 @@
         <tr>
             <td colspan="7">
                 <div class="p-p-3">
-                    <p-table [value]="guildDto.guildMembersDto" dataKey="memberId">
+                    <p-table  #dtt [value]="guildDto.guildMembersDto" [rows]="5" [paginator]="true" [globalFilterFields]="['memberId','nickname','phoneNumber']"
+                    [(selection)]="selectedGuildMembers" [rowHover]="true" dataKey="memberId"
+                    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true" >
+                    <ng-template pTemplate="caption">
+                        <div class="p-d-flex p-ai-center p-jc-between">
+                            <h5 class="p-m-0">Guild Management</h5>
+                            <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text" (input)="dtt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+                            </span>
+                        </div>
+                    </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
                                 <th pSortableColumn="memberId">教会成员ID <p-sortIcon field="memberId"></p-sortIcon></th>
@@ -52,7 +63,7 @@
                                 <th pSortableColumn="phoneNumber">手机号 <p-sortIcon field="phoneNumber"></p-sortIcon></th>
                                 <th pSortableColumn="role">成员角色 <p-sortIcon field="role"></p-sortIcon></th>
                                 <th pSortableColumn="status">成员状态 <p-sortIcon field="status"></p-sortIcon></th>
-                                <th style="width: 4rem">操作</th>
+                                <th style="width: 8rem">操作</th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-guildMember>
