--- a/src/app/pages/modules/dashboards/livecast/livecast.component.scss
+++ b/src/app/pages/modules/dashboards/livecast/livecast.component.scss
@@ -2,4 +2,11 @@
     .card{
         margin: 0 20px;
     }
+    td {  
+        width: 100%;  
+        height: auto;  
+        word-wrap:break-word;  
+        word-break:break-all;  
+        overflow: hidden;  
+    }
 }
