--- a/src/app/pages/modules/manual-review/idea-feedback/idea-feedback.component.html
+++ b/src/app/pages/modules/manual-review/idea-feedback/idea-feedback.component.html
@@ -1,3 +1,58 @@
-<p>
-  idea-feedback works!
-</p>
+<p-toast></p-toast>
+
+<div class="card">
+    <p-table #dt [value]="userFeedbacks" [rows]="10" [paginator]="true" [globalFilterFields]="['description','guildId','userId']"
+        [(selection)]="selecteduserFeedbacks" [rowHover]="true" dataKey="feedbackId"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+        <ng-template pTemplate="caption">
+            <div class="p-d-flex p-ai-center p-jc-between">
+                <h5 class="p-m-0">userFeedback Management</h5>
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+                </span>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width: 3rem">
+                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                </th>
+                <th pSortableColumn="feedbackId">回复ID <p-sortIcon field="feedbackId"></p-sortIcon></th>
+                <th pSortableColumn="userId">用户ID <p-sortIcon field="userId"></p-sortIcon></th>
+                <th pSortableColumn="description">意见描述 <p-sortIcon field="description"></p-sortIcon></th>
+                <th pSortableColumn="createdDate">意见提交时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
+                <th pSortableColumn="isReplied">是否回复 <p-sortIcon field="isReplied"></p-sortIcon></th>
+                <th pSortableColumn="replierId">回复者ID <p-sortIcon field="replierId"></p-sortIcon></th>
+                <th pSortableColumn="repliedDescription">回复内容</th>
+                <th pSortableColumn="repliedDate">回复时间 <p-sortIcon field="repliedDate"></p-sortIcon></th>
+                <th>
+                  <span style="color:red;">操作</span>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-userFeedback>
+            <tr>
+                <td>
+                    <p-tableCheckbox [value]="userFeedback"></p-tableCheckbox>
+                </td>
+                <td>{{userFeedback.feedbackId}}</td>
+                <td>{{userFeedback.userId}}</td>
+                <td>{{userFeedback.description}}</td>
+                <td>{{userFeedback.createdDate}}</td>
+                <td>{{userFeedback.isReplied?'已回复':'未回复'}}</td>
+                <td>{{userFeedback.replierId}}</td>
+                <td>{{userFeedback.repliedDescription}}</td>
+                <td>{{userFeedback.repliedDate}}</td>
+                <td style="word-wrap: normal !important;word-break: normal !important;">
+                  <button  style="margin-right: 1rem;" pButton type="button" label='回复' class="p-button-raised" (click)="onReplier(userFeedback)"></button>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            <div class="p-d-flex p-ai-center p-jc-between">
+                In total there are {{userFeedbacks ? userFeedbacks.length : 0 }} userFeedbacks.
+            </div>
+        </ng-template>
+    </p-table>
+</div>
